--- a/kickstart/package.json
+++ b/kickstart/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@truffle/hdwallet-provider": "^1.0.28",
     "dotenv": "^8.2.0",
+    "eth-json-rpc-filters": "^4.2.2",
     "fs-extra": "^8.1.0",
     "ganache-cli": "^6.7.0",
     "mocha": "^7.0.0",
